@@ -103,7 +103,11 @@ public class SecurityConfig {
 		CorsConfiguration configuration = new CorsConfiguration();
 
 		// 프로덕션 환경에서는 명시적으로 허용된 도메인만 지정
-		configuration.setAllowedOriginPatterns(List.of("*"));
+//		configuration.setAllowedOriginPatterns(List.of("*"));
+		configuration.setAllowedOrigins(Arrays.asList(
+				"https://j12a205.p.ssafy.io",
+				"http://localhost:5173"
+		));
 
 		configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
 		configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
